--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sc\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import typing as tp"
    ]
   },
   {
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,40 @@
     "\n",
     "Now, you should ask what if we had more variables that define my model?\n",
     "\n",
-    "The answer is easy :) Just consider it as a vector and all multiplication that we have become like the element-wise vector multiplication."
+    "The answer is easy :) Just consider it as a vector and all multiplication that we have become like the element-wise vector multiplication.\n",
+    "\n",
+    "$$y_i = w_0 + w_1*x_{i1} + w_2*x_{i2} + ... + w_n*x_{in}$$\n",
+    "$$ y = w^Tx$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(w:tp.List[float], x:tp.List[float]) -> tp.List[float]:\n",
+    "    return w*x"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3. Least Square Estimation (Training Process)\n",
+    "\n",
+    "Lets see how we utilize the least square in our implementation!\n",
+    "\n",
+    "$$L(w)=\\frac{1}{2}||y-xw||^2_{2}$$\n",
+    "\n",
+    "Also, the quadratic format is:\n",
+    "\n",
+    "$$L(w)=\\frac{1}{2}(Xw-y)^T(Xw-y)$$\n",
+    "\n",
+    "We have to find the gradient of the $L(w)$ to find the weights.\n",
+    "\n",
+    "$$\\nabla L(w) = 0$$"
    ]
   },
   {
