1- Least square estimation

--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -5,12 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science and Machine Learning is *interesting* but understanding the background of the is *much more interesting*."
+    "### If these turning epochs do not move with our will today,\n",
+    "### The spheres of time are not constant, do not grieve\n",
+    "\n",
+    "### Hafiz\n",
+    "\n",
+    "<img src=\"sinewave.jpg\" alt=\"Alternative text\" />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +106,62 @@
     "\n",
     "We have to find the gradient of the $L(w)$ to find the weights.\n",
     "\n",
-    "$$\\nabla L(w) = 0$$"
+    "$$\\nabla L(w) = 0$$\n",
+    "\n",
+    "For finding the gradient we need to use some algorithms to find the roots of our required weights. There are different ways like Bisection method but here the best option is \"Gradient Descent\" algorithm.\n",
+    "\n",
+    "A Brief Review on the Gradient Descent Algorithm: \n",
+    "\n",
+    "Step 1 : make an initial guess\n",
+    "Step 2 (general formulation):  $x_{i+1} = x_{i} - \\gamma_{i} ((\\nabla f)(x_i))^T$\n",
+    "\n",
+    "Some Tips:\n",
+    "* If we choose a suitable step size, the sequence of $f(x_0)>f(x_1)>...$ that helps the algorithm to converge to the local minimum.\n",
+    "* The step size is also called the learning rate.\n",
+    "* If we choose the step size to be too small, the gradient descent can be too slow. On the other hand if we choose it to be too large, gradient descent can overshoot, fail to converge or even diverge :(. (One solution is adding the momentum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Goal: Performing the least square fit using gradient descent\n",
+    "\"\"\"\n",
+    "def second_norm_gradient(Xtrue: tp.List[float], Ytrue: tp.List[float], W: tp.List[float])-> tp.List[float]:\n",
+    "    error = np.multiply(Xtrue, W) - Ytrue\n",
+    "    \"\"\"\n",
+    "    Error derivation based on linear algebra and notes\n",
+    "    \"\"\"\n",
+    "    second_norm_grad = [2*error*x for x in Xtrue]\n",
+    "    return second_norm_grad\n",
+    "\n",
+    "def gradient_descent(guess, gradient, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Exactly the formulation in the above description is utilized\n",
+    "    \"\"\"\n",
+    "    new_value = guess - gradient * learning_rate\n",
+    "    return new_value\n",
+    "def least_square_fit(Xdata: tp.List[float], Ydata: tp.List[float],\n",
+    "                     learning_rate: float=0.001, iteration: int=1000)-> tp.List[float]:\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    Xdata: The inputs of the dataset\n",
+    "    Ydata: The actual output of the dataset\n",
+    "    Learning Rate: Step Size\n",
+    "    Iteration: The total number that we have to make a prediction (update the weights)\n",
+    "    Epoch: Every time that model see the whole dataset\n",
+    "    \"\"\"\n",
+    "    # Start Iteration\n",
+    "    for _ in range(iteration):\n",
+    "        for start in range(len(Xdata)):\n",
+    "            # second_norm_gradient\n",
+    "            sc_norm_gradient = second_norm_gradient(Xdata, Ydata, initial)\n",
+    "            # gradient_descent\n",
+    "            initial = gradient_descent(initial, sc_norm_gradient, learning_rate)\n",
+    "    return initial"
    ]
   },
   {
