1- Added ridge and lasso calculation

--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -15,14 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sc\n",
     "import pandas as pd\n",
-    "import typing as tp"
+    "import typing as tp\n",
+    "import random"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simple Implementation\n",
     "def predict(w:tp.List[float], x:tp.List[float]) -> tp.List[float]:\n",
-    "    return w*x"
+    "    return w.T*x\n",
+    "\n",
+    "# A better implementation in the following link\n",
+    "# https://github.com/oilneck/prml_python/blob/master/prml/fitting/bayesian_regression.py"
    ]
   },
   {
@@ -123,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +159,8 @@
     "    Iteration: The total number that we have to make a prediction (update the weights)\n",
     "    Epoch: Every time that model see the whole dataset\n",
     "    \"\"\"\n",
+    "    # initial is our first guess for the weights to start the iteration\n",
+    "    initial = [random.random for _ in range(int(Xdata.shape[1]))]\n",
     "    # Start Iteration\n",
     "    for _ in range(iteration):\n",
     "        for start in range(len(Xdata)):\n",
@@ -162,6 +169,92 @@
     "            # gradient_descent\n",
     "            initial = gradient_descent(initial, sc_norm_gradient, learning_rate)\n",
     "    return initial"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4. Regularization (First solution for the overfitting)\n",
+    "1.4.1. Ridge Regression\n",
+    "\n",
+    "Ridge regression is an alternative for the Maximum likelihood estimation (MLE) as MLE can sometimes result in overfitting. What we do exactly in Ridge Regression is including our prior knowledge about data. How we define the prior? All the things are in your hand:))). Here, the Gaussian prior with zero mean is chosen based on our friend Murphy's book. The good thing about ridge regression is that the least square optimization using the gradient descent works for that. (We have our prior, does it remind you some method that we used it before?)\n",
+    "\n",
+    "$$\\hat{w}_{MAP} = argmin \\frac{1}{2\\sigma^2}(y-Xw)^T(y-Xw)+\\frac{1}{2\\tau^2}w^Tw$$\n",
+    "$$\\hat{w}_{MAP} = argmin RSS(w)+\\lambda||w||^2_2$$\n",
+    "\n",
+    "1.4.2. Lasso Regression\n",
+    "\n",
+    "This is another approach to overcome the overfitting problem, I myself believe that the ability of Lasso in feature selection is more important than overcoming the overfitting the peoblem. In Lasso, we actually minimize the $L_0$ Norm.\n",
+    "$$||w_0|| = \\sum^{D}_{d=1} I(|w_d|>0)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Goal: \n",
+    "1. Define the Ridge penalty and find the gradient of the function\n",
+    "2. Define the least square function for the ridge regression\n",
+    "3. Define the Lasso penalty\n",
+    "\"\"\"\n",
+    "def ridge_penalty(lamda: float, w:tp.List[float])->float:\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    Lambda: The prior strength coefficient\n",
+    "    w: model weights\n",
+    "    \"\"\"\n",
+    "    ridge_penalt = lamda * np.dot(w,w)\n",
+    "    return ridge_penalt\n",
+    "\n",
+    "def ridge_gradient(lamda: float, w:tp.List[float])-> tp.List[float]:\n",
+    "    \"\"\"\n",
+    "    Simple derivatives calculation\n",
+    "    \"\"\"\n",
+    "    ridge_grad = [2 * lamda * w_i for w_i in w]\n",
+    "    return ridge_grad\n",
+    "\n",
+    "def least_square_fit_ridge(Xdata: tp.List[float], Ydata: tp.List[float], lamda: float=0,\n",
+    "                     learning_rate: float=0.001, iteration: int=1000)-> tp.List[float]:\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    Xdata: The inputs of the dataset\n",
+    "    Ydata: The actual output of the dataset\n",
+    "    Learning Rate: Step Size\n",
+    "    Iteration: The total number that we have to make a prediction (update the weights)\n",
+    "    Epoch: Every time that model see the whole dataset\n",
+    "    \"\"\"\n",
+    "    # initial is our first guess for the weights to start the iteration\n",
+    "    initial = [random.random for _ in range(int(Xdata.shape[1]))]\n",
+    "    # Start Iteration\n",
+    "    for _ in range(iteration):\n",
+    "        for start in range(len(Xdata)):\n",
+    "            # second_norm_gradient\n",
+    "            sc_norm_gradient = second_norm_gradient(Xdata, Ydata, initial) + ridge_gradient(lamda, initial)\n",
+    "            # gradient_descent\n",
+    "            initial = gradient_descent(initial, sc_norm_gradient, learning_rate)\n",
+    "    return initial\n",
+    "\n",
+    "def lasso_penalty(lamda: float, w:tp.List[float])->float:\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    Lambda: The prior strength coefficient\n",
+    "    w: model weights\n",
+    "    \"\"\"\n",
+    "    lasso_penalt = lamda * np.sum(w)\n",
+    "    return lasso_penalt"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5. Goodness of Fit"
    ]
   },
   {
