1- Create a list and added extra notes

--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -245,6 +245,7 @@
     "    Lambda: The prior strength coefficient\n",
     "    w: model weights\n",
     "    \"\"\"\n",
+    "    # !!! Modify for the absolute values\n",
     "    lasso_penalt = lamda * np.sum(w)\n",
     "    return lasso_penalt"
    ]
@@ -263,6 +264,70 @@
    "metadata": {},
    "source": [
     "# 2 Advanced Models Using the Regression Method"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Linear Basis function"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. Polynomial Regression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Bayesian Linear Regression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 Overfitting"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1. General Perspective"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Feeding New Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3. Regularization"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4. Bayesian Curve Fitting "
    ]
   }
  ],
