--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -271,6 +271,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Note:\n",
+    "```\n",
+    "\n",
+    "The codes implemented here are based on the two following references which follows Object Oriented Programming (OOP). Therefore, it would be a good idea to reviewing the following source, even if you are familiar eith OOP.\n",
+    "\n",
+    "Source: https://realpython.com/python3-object-oriented-programming/\n",
+    "\n",
+    "Refrences:\n",
+    "\n",
+    "1. Bishop, Christopher M. (2006). Pattern recognition and machine learning. New York :Springer,\n",
+    "\n",
+    "2. https://github.com/oilneck/prml_python\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.1. Linear Basis function"
    ]
   },
