--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import scipy as sc\n",
     "import pandas as pd\n",
     "import typing as tp\n",
+    "import matplotlib.pyplot as plt\n",
     "import random"
    ]
   },
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,6 +294,72 @@
    "metadata": {},
    "source": [
     "### 2.1. Linear Basis function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PolyTransformer(object):\n",
+    "    # The main input that is necessary to initialize the model\n",
+    "    #  with that is the degree of Polynomial function\n",
+    "    def __init__(self, degree=1):\n",
+    "        self.degree = degree\n",
+    "    def transform(self, Xtrain: np.ndarray)-> np.ndarray:\n",
+    "        Xtrain = Xtrain.reshape(-1,1)\n",
+    "        if Xtrain.shape[1] == 1:\n",
+    "            Xtrain = Xtrain.T\n",
+    "        assert Xtrain.shape[1] == self.degree + 1\n",
+    "        x_train_transform = np.power(Xtrain, np.arange(0, self.degree+1))\n",
+    "        return x_train_transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_basis(Xtrain: np.ndarray, basis: np.ndarray, basis_type: str):\n",
+    "    fig = plt.figure()\n",
+    "    plt.rcParams['figure.figsize'] = (10, 10)\n",
+    "    plt.rcParams[\"font.family\"] = \"Serif\"\n",
+    "    plt.rcParams['xtick.labelsize']=12\n",
+    "    plt.rcParams['ytick.labelsize']=12\n",
+    "    plt.plot(Xtrain, basis)\n",
+    "    plt.title('Basis of type %s' % basis_type)\n",
+    "    plt.xlabel('X')\n",
+    "    plt.ylabel('Basis Values')\n",
+    "    plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m xtrain\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mlinspace(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m100\u001b[39m)\n\u001b[0;32m      5\u001b[0m xtrain\u001b[39m.\u001b[39mshape\n\u001b[1;32m----> 6\u001b[0m polybasis \u001b[39m=\u001b[39m PolyTransformer(degree\u001b[39m=\u001b[39;49m\u001b[39m11\u001b[39;49m)\u001b[39m.\u001b[39;49mtransform(xtrain)\n",
+      "Cell \u001b[1;32mIn[51], line 10\u001b[0m, in \u001b[0;36mPolyTransformer.transform\u001b[1;34m(self, Xtrain)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mif\u001b[39;00m Xtrain\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m      9\u001b[0m     Xtrain \u001b[39m=\u001b[39m Xtrain\u001b[39m.\u001b[39mT\n\u001b[1;32m---> 10\u001b[0m \u001b[39massert\u001b[39;00m Xtrain\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdegree \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     11\u001b[0m x_train_transform \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mpower(Xtrain, np\u001b[39m.\u001b[39marange(\u001b[39m0\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdegree\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m     12\u001b[0m \u001b[39mreturn\u001b[39;00m x_train_transform\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Perform a test on the developed modules\n",
+    "\"\"\"\n",
+    "xtrain=np.linspace(-1, 1, 100)\n",
+    "xtrain.shape\n",
+    "polybasis = PolyTransformer(degree=11).transform(xtrain)"
    ]
   },
   {
