1-Add Gaussian and Sigmoid basis

--- a/Regression_Base.ipynb
+++ b/Regression_Base.ipynb
@@ -317,6 +317,11 @@
     "        self.degree = degree\n",
     "    def transform(self, Xtrain: np.ndarray)-> np.ndarray:\n",
     "        if Xtrain.ndim == 1:\n",
+    "            \"\"\"\n",
+    "            As the array is (n,) we turn it to (n,1)\n",
+    "            Why ndim not the shape method? we want to check if it is 1 dimensional\n",
+    "            problem or not. We are not looking for the number of rows or columns.\n",
+    "            \"\"\"\n",
     "            Xtrain = Xtrain.reshape(-1,1)\n",
     "        x_train_transform = np.power(Xtrain, np.arange(0, self.degree+1))\n",
     "        return x_train_transform"
@@ -328,8 +333,41 @@
    "metadata": {},
    "source": [
     "```\n",
-    "Modify a code in a way that is applicable for multidimensional regression model\n",
+    "Modify a code in a way that is applicable for multidimensional regression model.\n",
     "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sigmoid**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SigmoidTransformer(object):\n",
+    "    def __init__(self, mean:tp.List[float], std:float):\n",
+    "        self.mean = mean\n",
+    "        self.std = std\n",
+    "\n",
+    "    def sigmoidfunc(self, x):\n",
+    "        return\n",
+    "    def transform(self, Xtrain: np.ndarray)-> np.ndarray:\n",
+    "        if Xtrain.ndim == 1:\n",
+    "            \"\"\"\n",
+    "            As the array is (n,) we turn it to (n,1)\n",
+    "            Why ndim not the shape method? we want to check if it is 1 dimensional\n",
+    "            problem or not. We are not looking for the number of rows or columns.\n",
+    "            \"\"\"\n",
+    "            Xtrain = Xtrain.reshape(-1,1)\n",
+    "        x_train_transform = np.power(Xtrain, np.arange(0, self.degree+1))\n",
+    "        return x_train_transform"
    ]
   },
   {
@@ -375,62 +413,6 @@
     "xtrain=np.linspace(-1, 1, 100)\n",
     "polybasis = PolyTransformer(degree=11).transform(xtrain)\n",
     "plot_basis(xtrain, polybasis, 'Polynomial')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2. Polynomial Regression"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3. Bayesian Linear Regression"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3 Overfitting"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1. General Perspective"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2. Feeding New Data"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.3. Regularization"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.4. Bayesian Curve Fitting "
    ]
   }
  ],
